[package]
name = "hyper-uppercut"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
secp256k1 = { version = "0.27", features = ["rand", "rand-std"] }
hex = "0.4"
sha2 = "0.10"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
ollama-rs = "0.2.1"
dotenv = "0.15"
